--- a/source/less/blocks/index/details.less
+++ b/source/less/blocks/index/details.less
@@ -43,10 +43,9 @@
 }
 
 .details__item {
-  margin-bottom: 26px;
+  margin-bottom: 9%;
   position: relative;
   display: flex;
-  align-items: center;
   justify-content: flex-start;
   flex-wrap: wrap;
   padding-left: 80px;
@@ -88,7 +87,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 80px;
+    margin-bottom: 11%;
     z-index: 3;
     padding-top: 110px;
     padding-left: 0;
@@ -110,8 +109,8 @@
     }
 
     &--beneficial {
-      width: 230px;
-      margin-right: 153px;
+      width: 30%;
+      margin-right: 24%;
 
       &::after {
         content: "1";
@@ -120,7 +119,7 @@
     }
 
     &--powder {
-      width: 246px;
+      width: 32%;
 
       &::after {
         content: "2";
@@ -128,8 +127,8 @@
     }
 
     &--replacement {
-      width: 247px;
-      margin-right: 137px;
+      width: 32%;
+      margin-right: 22%;
       margin-bottom: 0;
 
       &::after {
@@ -138,7 +137,7 @@
     }
 
     &--changes {
-      width: 249px;
+      width: 35%;
       margin-bottom: 0;
 
       &::after {
@@ -149,17 +148,23 @@
 
   @media (min-width: @desktop-width) {
     margin-bottom: 0;
+    width: 17%;
 
     &--beneficial {
-      margin-right: 94px;
+      margin-right: 9.5%;
     }
 
     &--powder {
-      margin-right: 79px;
+      width: 19%;
+      margin-right: 7.5%;
     }
 
     &--replacement {
-      margin-right: 77px;
+      margin-right: 9.5%;
+    }
+
+    &--changes {
+      width: 20%;
     }
   }
 }
