--- a/source/less/blocks/index/example.less
+++ b/source/less/blocks/index/example.less
@@ -54,7 +54,6 @@
     .wrapper;
     display: flex;
     justify-content: flex-start;
-    padding-right: 70px;
   }
 }
 
@@ -65,11 +64,11 @@
   flex-direction: column;
 
   @media (min-width: @desktop-width) {
-    width: 436px;
+    width: 30%;
     margin: 0;
     padding: 0;
     padding-top: 57px;
-    margin-right: 100px;
+    margin-right: 14%;
     justify-content: flex-start;
   }
 }
@@ -78,8 +77,8 @@
   margin-bottom: 24px;
 
   @media (min-width: @tablet-width) {
-    width: 700px;
-    margin-bottom: 51px;
+    width: 99%;
+    margin-bottom: 54px;
   }
 
   @media (min-width: @desktop-width) {
