--- a/source/less/blocks/catalog/products.less
+++ b/source/less/blocks/catalog/products.less
@@ -7,15 +7,11 @@
     .wrapper;
     font-size: 16px;
     margin-bottom: 70px;
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-auto-rows: minmax(430px, auto);
-    column-gap: 60px;
   }
 
   @media (min-width: @desktop-width) {
     grid-template-columns: auto auto auto auto;
-    margin-bottom: 74px;
+    margin-bottom: 76px;
   }
 }
 
@@ -27,17 +23,14 @@
   flex-wrap: wrap;
 
   @media (min-width: @tablet-width) {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 5;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 8.5%;
   }
 
   @media (min-width: @desktop-width) {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 3;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 6.5%;
   }
 }
 
@@ -46,45 +39,19 @@
   border-top: 1px solid @grey-border;
 
   @media (min-width: @tablet-width) {
-    width: 324px;
-    padding: 30px 36px 40px;
-    margin: 0 60px 140px 0;
+    margin-bottom: 142px;
+    padding: 9% 11% 12%;
     background-color: @basic-grey;
     border: none;
 
-    &:nth-child(2n) {
-      margin-right: 0;
-    }
-
-    &:nth-child(2) {
-      & .products__photo {
-        height: 205px;
-      }
-    }
-
-    &:last-child {
+    &:nth-child(7) {
       margin-bottom: 0;
     }
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0 80px 143px 0;
-    width: 245px;
-    padding: 0 30px 40px 35px;
-
-    &:nth-child(2n) {
-      margin-right: 80px;
-    }
-
-    &:nth-child(2) {
-      & .products__photo {
-        height: 200px;
-      }
-    }
-
-    &:nth-child(4n) {
-      margin-right: 0;
-    }
+    margin-bottom: 143px;
+    padding: 0 14% 16%;
 
     &:nth-child(5),
     &:nth-child(6) {
@@ -102,60 +69,51 @@
 
   @media (min-width: @tablet-width) {
     position: relative;
-    width: 252px;
+    margin: 0 auto;
     flex-direction: column;
     align-items: center;
     padding: 0;
-    padding-top: 131px;
+    padding-top: 52%;
     margin-bottom: 33px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 180px;
     padding-top: 133px;
   }
 }
 
 .products__wrapper--photo {
-  width: 140px;
+  width: 50%;
+  text-align: center;
 
   @media (min-width: @tablet-width) {
     position: absolute;
-    top: -102px;
-    left: -7px;
-    width: 168px;
+    top: -36%;
+    width: 68%;
   }
 
   @media (min-width: @desktop-width) {
-    top: -80px;
-    left: -15px;
-    width: 172px;
-    margin-bottom: 33px;
+    width: 100%;
+    top: -26%;
   }
 }
 
 .products__photo {
   @media (min-width: @tablet-width) {
-    margin-left: 50px;
-    width: 168px;
-    height: 198px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin-left: 20px;
-    width: 172px;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
   }
 }
 
 .products__wrapper--text {
-  width: 142px;
+  width: 50%;
 
   @media (min-width: @tablet-width) {
-    width: 250px;
+    width: 100%;
   }
 
   @media (min-width: @desktop-width) {
-    width: 173px;
     padding-top: 30px;
   }
 }
@@ -164,13 +122,13 @@
   .heading(16px; 20px);
   .uppercase-text(@special-dark-text);
   display: block;
-  width: 76px;
+  width: 55%;
   margin-bottom: 14px;
   word-break: break-all;
 
   @media (min-width: @tablet-width) {
     .heading(20px; 24px);
-    min-width: 130px;
+    width: 52%;
     text-align: center;
     margin: 0 auto 15px;
   }
@@ -178,11 +136,12 @@
   @media (min-width: @desktop-width) {
     .heading(20px; 21px);
     margin-bottom: 20px;
+    width: 74%;
   }
 }
 
 .products__info {
-  width: 100%;
+  width: 90%;
   border-collapse: collapse;
   word-break: break-all;
 
@@ -193,6 +152,14 @@
       line-height: 30px;
       border-bottom: 1px solid @special-grey;
     }
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 97%;
   }
 }
 
@@ -211,11 +178,7 @@
   word-break: break-all;
 
   @media (min-width: @tablet-width) {
-    width: 248px;
+    width: 100%;
     margin-bottom: 0;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 168px;
   }
 }
