--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -1,6 +1,6 @@
 .form {
   padding-bottom: 32px;
-  word-break: break-all;
+  overflow-wrap: break-word;
 
   @media (min-width: @tablet-width) {
     padding-bottom: 57px;
@@ -286,6 +286,7 @@
 
   & label {
     flex: 1;
+    word-break: break-all;
   }
 }
 
@@ -297,15 +298,15 @@
   overflow-wrap: break-word;
 
   &--name {
-    min-width: 228px;
+    min-width: 81%;
   }
 
   &--weight {
-    min-width: 204px;
+    min-width: 72%;
   }
 
   &--age {
-    min-width: 172px;
+    min-width: 61%;
   }
 
   &:hover {
@@ -319,7 +320,7 @@
   }
 
   &--mail {
-    min-width: 219px;
+    min-width: 78%;
 
     &:focus,
     &:disabled {
@@ -330,7 +331,7 @@
   }
 
   &--tel {
-    min-width: 204px;
+    min-width: 72%;
 
     &:focus,
     &:disabled {
@@ -368,25 +369,25 @@
     padding: 10px 20px;
 
     &--name {
-      min-width: 565px;
+      min-width: 89%;
     }
 
     &--weight {
-      min-width: 534px;
+      min-width: 84%;
     }
 
     &--age {
-      min-width: 495px;
+      min-width: 78%;
       padding: 10px 23px;
     }
 
     &--mail {
-      min-width: 549px;
+      min-width: 87%;
     }
 
     &--tel {
       padding: 10px 18px;
-      min-width: 533px;
+      min-width: 84%;
     }
 
     &--tel,
@@ -395,25 +396,25 @@
     }
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     &--name {
-      min-width: 503px;
+      min-width: 88%;
     }
 
     &--weight {
-      min-width: 471px;
+      min-width: 83%;
     }
 
     &--age {
-      min-width: 432px;
+      min-width: 76%;
     }
 
     &--mail {
-      min-width: 484px;
+      min-width: 85%;
     }
 
     &--tel {
-      min-width: 470px;
+      min-width: 82%;
     }
   }
 }
@@ -511,6 +512,7 @@
     flex-wrap: wrap;
     align-items: center;
     cursor: pointer;
+    word-break: break-all;
   }
 
   & label:focus {
