--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -15,7 +15,8 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  padding: 10px 19px 9px;
+  padding-top: 10px;
+  padding-bottom: 9px;
 
   &--grey-bg {
     padding-top: 11px;
@@ -79,8 +80,8 @@
 .address__info {
   font-size: 14px;
   line-height: 20px;
-  width: 140px;
   margin: 0;
+  width: 140px;
   overflow-wrap: break-word;
 
   @media (min-width: @tablet-width) {
