--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -31,10 +31,9 @@
   align-items: center;
 
   @media (min-width: @tablet-width) {
-    padding-top: 24px;
+    padding: 24px 35px 0 0;
     flex: 1 0 0;
     margin: 0;
-    padding-left: 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -78,6 +77,7 @@
 
 .page-header__title {
   padding-top: 7px;
+  text-align: center;
 
   &:hover {
     opacity: 0.7;
