--- a/source/less/blocks/general/site-list.less
+++ b/source/less/blocks/general/site-list.less
@@ -40,11 +40,11 @@
 
   @media (min-width: @tablet-width) {
     border: none;
-    margin-right: 30px;
-    min-width: 155px;
+    margin-right: 7%;
+    min-width: 35%;
 
     &:first-child {
-      min-width: 70px;
+      min-width: 16%;
     }
 
     &:nth-child(3n) {
@@ -53,8 +53,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-right: 30px;
-    min-width: 172px;
+    margin-right: 5%;
+    min-width: 37%;
   }
 }
 
