--- a/source/less/blocks/general/social.less
+++ b/source/less/blocks/general/social.less
@@ -3,10 +3,9 @@
   padding: 0;
   margin: 0;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  padding-left: 73px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
