--- a/source/less/blocks/general/main-nav.less
+++ b/source/less/blocks/general/main-nav.less
@@ -54,6 +54,7 @@
     }
 
     &--nojs .main-nav__list {
+      display: block;
       position: static;
       min-height: 0;
     }
@@ -72,7 +73,7 @@
 
   &--index {
     @media (min-width: @tablet-width) {
-      width: 63%;
+      width: 62.7%;
     }
 
     @media (min-width: @desktop-width) {
