--- a/source/less/blocks/index/example-result.less
+++ b/source/less/blocks/index/example-result.less
@@ -27,20 +27,20 @@
 
   @media (min-width: @tablet-width) {
     width: 23%;
-    margin-right: 6%;
+    margin-right: 5.8%;
     margin-bottom: 49px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 36%;
-    margin-right: 10%;
+    width: 37%;
+    margin-right: 9.5%;
     margin-bottom: 33px;
   }
 }
 
 .example-result__count {
   .heading(24px; 24px);
-  padding: 14px 0 16px;
+  padding: 14px 0 17px;
   text-align: center;
   text-transform: uppercase;
   margin: 0;
@@ -51,7 +51,7 @@
 
   @media (min-width: @tablet-width) {
     .heading(30px; 37px);
-    padding: 14px 0 19px;
+    padding: 14px 0 20px;
   }
 }
 
@@ -107,9 +107,19 @@
   @media (min-width: @desktop-width) {
     flex-direction: row;
     justify-content: space-between;
-    width: 74%;
+    width: 74.5%;
     text-align: left;
     margin: 0;
     margin-top: 0;
+  }
+}
+
+.example-result__sum {
+  @media (min-width: @tablet-width) {
+    line-height: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    line-height: 27px;
   }
 }
