--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -64,7 +64,7 @@
   padding: 0 10%;
 
   @media (min-width: @tablet-width) {
-    padding-left: 12%;
+    padding-left: 12.5%;
   }
 
   @media (min-width: @desktop-width) {
@@ -111,8 +111,8 @@
   z-index: 3;
 
   @media (min-width: @tablet-width) {
-    padding: 0 12%;
-    min-height: 610px;
+    padding: 0 11.5%;
+    min-height: 609px;
     background-image: url("../img/index-can-tablet.png");
     background-repeat: no-repeat;
     background-position: top;
@@ -142,8 +142,12 @@
   @media (min-width: @desktop-width) {
     display: block;
     margin-left: 123px;
+    position: relative;
+    top: -145px;
     width: 552px;
+    /*
     margin-top: -280px;
+    */
   }
 }
 
@@ -165,6 +169,6 @@
     padding: 16px 20px 18px;
     order: -1;
     overflow-wrap: break-word;
-    margin: 35px 0 200px 0;
+    margin: 35px 0 280px 0;
   }
 }
