--- a/source/less/blocks/index/slider.less
+++ b/source/less/blocks/index/slider.less
@@ -103,7 +103,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-left: 115px;
+    margin-top: 5px;
+    margin-left: 112px;
     width: 570px;
   }
 }
