--- a/source/less/blocks/catalog/products-big-list.less
+++ b/source/less/blocks/catalog/products-big-list.less
@@ -7,7 +7,7 @@
   border-bottom: 1px solid @grey-border;
 
   @media (min-width: @tablet-width) {
-    padding: 5% 10.5% 10%;
+    padding: 5% 10.5% 11%;
     align-items: center;
     border: 2px solid @basic-grey;
   }
@@ -15,7 +15,7 @@
   @media (min-width: @desktop-width) {
     padding-left: 0;
     padding-right: 0;
-    padding-bottom: 15%;
+    padding-bottom: 15.7%;
   }
 }
 
@@ -67,7 +67,7 @@
   @media (min-width: @tablet-width) {
     .heading(20px; 22px);
     color: @black-text;
-    padding-top: 47%;
+    padding-top: 117px;
     padding-bottom: 9%;
     max-width: 55%;
     word-break: normal;
@@ -76,13 +76,18 @@
     &::before,
     &::after {
       width: 40%;
-      top: 22%;
+      top: 37px;
     }
   }
 
   @media (min-width: @desktop-width) {
     max-width: 100%;
-    padding-top: 49%;
+    padding-top: 118px;
+
+    &::before,
+    &::after {
+      top: 38px;
+    }
   }
 }
 
