--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -12,23 +12,23 @@
 .address__wrapper {
   .wrapper;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   flex-wrap: wrap;
   padding-top: 10px;
   padding-bottom: 9px;
 
-  &--grey-bg {
-    padding-top: 11px;
-    padding-bottom: 14px;
+  &--catalog {
+    padding-top: 16px;
+    padding-bottom: 12px;
   }
 
   @media (min-width: @tablet-width) {
-    padding: 47px 70px 45px;
+    padding: 45px 9% 43px;
 
-    &--grey-bg {
-      padding-top: 51px;
-      padding-bottom: 56px;
+    &--catalog {
+      padding-top: 49px;
+      padding-bottom: 44px;
     }
   }
 
@@ -46,6 +46,10 @@
 
     &--catalog {
       padding: 45px 0;
+
+      & .address__info--steet {
+        padding-top: 8px;
+      }
     }
   }
 }
@@ -53,11 +57,13 @@
 .address__text {
   .heading(16px; 21px);
   .uppercase-text(@black-text);
-  width: 140px;
+  width: 50%;
   overflow-wrap: break-word;
 
   &--grey-bg {
-    margin-bottom: 10px;
+    margin-top: 12px;
+    margin-bottom: 14px;
+    line-height: 20px;
 
     @media (min-width: @tablet-width) {
       margin-top: 15px;
@@ -65,15 +71,35 @@
   }
 
   @media (min-width: @tablet-width) {
-    .heading(20px; 23px);
-    width: 171px;
+    .heading(20px; 24px);
+    width: 25%;
+
+    &--grey-bg {
+      line-height: 26px;
+    }
   }
 
   @media (min-width: @desktop-width) {
     .heading(20px; 25px);
-    width: 163px;
+    width: 29%;
     margin-left: 75px;
     margin-right: 87px;
+
+    &--grey-bg {
+      margin-top: 18px;
+    }
+  }
+}
+
+.address__info-wrapper {
+  width: 50%;
+
+  @media (min-width: @tablet-width) {
+    width: 30%;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 28%;
   }
 }
 
@@ -81,39 +107,41 @@
   font-size: 14px;
   line-height: 20px;
   margin: 0;
-  width: 140px;
   overflow-wrap: break-word;
 
   @media (min-width: @tablet-width) {
     font-size: 16px;
     line-height: 24px;
-    width: 159px;
     text-align: right;
 
     &--steet {
-      margin-bottom: 10px;
+      margin-bottom: 14px;
+      line-height: 23px;
     }
   }
 
   @media (min-width: @desktop-width) {
     text-align: left;
     line-height: 25px;
+
+    &--steet {
+      margin-bottom: 15px;
+      line-height: 20px;
+    }
   }
 }
 
 .address__map {
-  width: 100%;
   height: 362px;
-
-  & .address__image {
-    object-fit: cover;
-  }
+  width: 100%;
 
   @media (min-width: @tablet-width) {
     height: 400px;
-
-    & .address__image {
-      height: 100%;
-    }
   }
+}
+
+.address__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
