--- a/source/less/blocks/general/page-footer.less
+++ b/source/less/blocks/general/page-footer.less
@@ -59,7 +59,7 @@
 
   @media (min-width: @tablet-width) {
     border: none;
-    width: 130px;
+    width: 53%;
     padding: 0;
     margin-bottom: 0;
   }
