--- a/source/less/blocks/catalog/products-big-list.less
+++ b/source/less/blocks/catalog/products-big-list.less
@@ -1,4 +1,4 @@
-.products-big-list__container {
+.products__big-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -19,7 +19,7 @@
   }
 }
 
-.products-big-list__text {
+.products__text {
   width: 87%;
   text-align: center;
   word-break: break-all;
@@ -40,7 +40,7 @@
   }
 }
 
-.products-big-list__bold-text {
+.products__title {
   .heading(16px; 20px);
   .uppercase-text(@black-text);
   padding-top: 78px;
@@ -88,32 +88,5 @@
     &::after {
       top: 38px;
     }
-  }
-}
-
-.products-big-list__link {
-  .button;
-  color: @special-dark-grey;
-  background-color: @basic-grey;
-  margin-top: 9px;
-  margin-bottom: 24px;
-  word-break: break-all;
-
-  &:hover,
-  &:focus {
-    background-color: @grey-button-hover;
-  }
-
-  &:active {
-    color: @catalog-button-active;
-  }
-
-  @media (min-width: @tablet-width) {
-    margin: auto 0 0;
-    width: 100%;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 70%;
   }
 }
