--- a/source/less/blocks/general/social.less
+++ b/source/less/blocks/general/social.less
@@ -17,8 +17,12 @@
   margin-right: 35px;
   margin-bottom: 5px;
 
-  &:nth-child(3n) {
-    margin-right: 0;
+  &:first-child {
+    padding-left: 13px;
+  }
+
+  &:last-child {
+    margin-right: 15px;
   }
 
   @media (min-width: @tablet-width) {
@@ -27,6 +31,18 @@
     &:nth-child(2n) {
       margin-right: 21px;
     }
+  }
+
+  @media (min-width: @desktop-width) {
+    &:first-child {
+      padding-left: 20px;
+    }
+
+    &:nth-child(2n) {
+      margin-right: 20px;
+    }
+
+    margin-right: 26px;
   }
 }
 
